Updated Error codes in .yaml & tests
